fixed scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@
 	
 	div.boxversions
 	{
-		height:500px !important; height /**/: 300px;
+		height:500px !important; height /**/: 500px;
 		padding: 4px;
 		border:1px solid #EEE; border-right:0 solid;
 		background:url(gradient.png) repeat-x fixed top left;
